[gd_scene load_steps=3 format=3 uid="uid://cq1r6fmfn1312"]

[ext_resource type="Script" uid="uid://jg1awlc5kx0x" path="res://addons/character-combo-tree/editor/graph-nodes/root/character_combo_chain_root_graph_node.gd" id="1_uv7w7"]
[ext_resource type="PackedScene" uid="uid://qndrwx7n0so3" path="res://addons/character-combo-tree/editor/graph-nodes/components/graph_node_horizontal_option_container.tscn" id="2_pldas"]

[node name="CharacterComboChainRootGraphNode" type="GraphNode"]
offset_right = 310.0
offset_bottom = 143.0
mouse_filter = 1
title = "New Chain Root"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_uv7w7")

[node name="PrerequisiteStateOption" parent="." instance=ExtResource("2_pldas")]
unique_name_in_owner = true
layout_mode = 2
_label_text = "Prerequisite State"
_input_type = 5
_options = Array[String](["Grounded", "Arial", "Juxtaposed"])

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StartingAttackInput" type="Label" parent="."]
layout_mode = 2
text = "Starting Attack:"

[connection signal="input_set" from="PrerequisiteStateOption" to="." method="_on_prerequisite_state_option_input_set"]
